--- a/my-portfolio/src/components/Sections/ContactsSection/contacts-section.css
+++ b/my-portfolio/src/components/Sections/ContactsSection/contacts-section.css
@@ -1,38 +1,59 @@
-.contacts-section {
+.contact-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min-content, 50rem));
+  grid-template-columns: repeat(auto-fill, minmax(min-content, 60rem));
   grid-template-rows: auto;
-  background: linear-gradient(to bottom, #08233c, #536575, #21214a);
   justify-content: center;
-  height: 100%;
-  width: 100%;
+  align-items: center;
+  background: linear-gradient(to bottom, #08233c, #536575, #21214a);
   gap: 7rem;
+  height: 100%;
 }
 
-.contacts-container {
-  width: 50rem;
-  height: 62rem;
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-form-container {
+  width: 60%;
+  height: 60%;
   margin: 2rem auto;
+  padding: 2rem 2rem;
   border-radius: 5%;
   background: linear-gradient(to bottom, #6b6b6b, #0f3559);
   display: flex;
   flex-direction: column;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+  color: #cce5e7;
+  font-size: 1.5rem;
 }
 
-.contacts-image {
-  width: 50rem;
-  height: 62rem;
-  margin: 2rem auto;
-  border-radius: 5%;
-  background-image: url("../../../data/images/profil-pic.jpg");
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+.contact-container-cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row: auto;
+  justify-items: start;
+  width: fit-content;
+  height: fit-content;
+  row-gap: 2rem;
+  column-gap: 2rem;
+  margin-top: 5rem;
 }
 
-.contacts-container-title {
+.contact-form-container label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
+
+.contact-form-container input {
+  margin-bottom: 1.5rem;
+}
+.contact-form-container textarea {
+  margin-bottom: 1.5rem;
+}
+
+.contact-container-title {
   font-size: 8rem;
   font-weight: 700;
   color: #cce5e7;
@@ -40,4 +61,12 @@
   margin-top: 2rem;
   text-transform: uppercase;
   opacity: 0.2;
+}
+
+.contact-container-intro {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #a8dae0;
+  margin: 1.5rem;
+  text-align: center;
 }
